--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -1,31 +1,37 @@
 ﻿@using BlazorApp1.Shared.Sidebar
 @using BlazorApp1.Shared.Topbar
 @using Microsoft.AspNetCore.Http.Extensions;
+
+
 @inherits LayoutComponentBase
 @inject NavigationManager MyNavigationManager
 
 <PageTitle>BlazorApp1</PageTitle>
 
 <html lang="en">
-	<head><base href=""/>
-		<HeadImport/>		
-	</head>
-	<body id="kt_app_body" data-kt-app-layout="dark-sidebar" data-kt-app-header-fixed="true" data-kt-app-sidebar-enabled="true" data-kt-app-sidebar-fixed="true" data-kt-app-sidebar-hoverable="true" data-kt-app-sidebar-push-header="true" data-kt-app-sidebar-push-toolbar="true" data-kt-app-sidebar-push-footer="true" data-kt-app-toolbar-enabled="true" class="app-default">
-		
-		<script>var defaultThemeMode = "light"; var themeMode; if ( document.documentElement ) { if ( document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if ( localStorage.getItem("data-bs-theme") !== null ) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
+<head>
+    <base href="" />
+    <HeadImport />
+</head>
+<body id="kt_app_body" data-kt-app-layout="dark-sidebar" data-kt-app-header-fixed="true" data-kt-app-sidebar-enabled="true" data-kt-app-sidebar-fixed="true" data-kt-app-sidebar-hoverable="true" data-kt-app-sidebar-push-header="true" data-kt-app-sidebar-push-toolbar="true" data-kt-app-sidebar-push-footer="true" data-kt-app-toolbar-enabled="true" class="app-default">
 
-		<div class="d-flex flex-column flex-root app-root" id="kt_app_root">
-			<div class="app-page flex-column flex-column-fluid" id="kt_app_page">
-			
-				<Topbar/>
+    <script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
 
-				<Sidebar/>
-				
-				</div>
-		</div>
-		<Scrolltop/>
+    <div class="d-flex flex-column flex-root app-root" id="kt_app_root">
+        <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
 
-		<ScriptDef/>
+            <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
+                <Topbar />
 
-	</body>
+                <Sidebar />
+                <h1>Merhaba Dünya</h1>
+            </div>
+        </div>
+
+    </div>
+    <Scrolltop />
+
+    <ScriptDef />
+
+</body>
 </html>
