--- a/BlazorApp1/Pages/Counter.razor
+++ b/BlazorApp1/Pages/Counter.razor
@@ -1,18 +1,38 @@
 ﻿@page "/counter"
 
+@using BlazorApp1.Data;
+@using System.Globalization;
+
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<div class="input-group" >
+    <EditForm Model="weather">
+        <InputText  @bind-Value="@number" @onkeyup=@(x => changeFunc(@number))></InputText>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
+    </EditForm>
+    <p role="status">Current count: @number</p>
+</div>
 @code {
     private int currentCount = 0;
+    public string number = "123";
+
+    private WeatherForecast weather = new();
+    private CultureInfo cultureInfo = new CultureInfo("en-US");
 
     private void IncrementCount()
     {
         currentCount++;
     }
+
+    public void changeFunc( string numberVal )
+    {
+        if ( decimal.TryParse(numberVal, out decimal parsedAmount) )
+        {
+            var amount = parsedAmount;
+            number = string.Format(cultureInfo, "{0:C}", amount);
+        }
+        StateHasChanged();
+    }
+
 }
