--- a/BlazorApp1/Shared/ScriptDef.razor
+++ b/BlazorApp1/Shared/ScriptDef.razor
@@ -1,6 +1,4 @@
-﻿
-<script>var hostUrl = "assets/";</script>
+﻿<script>var hostUrl = "assets/";</script>
 <!--begin::Global Javascript Bundle(mandatory for all pages)-->
 <script src="assets/plugins/global/plugins.bundle.js"></script>
 <script src="assets/js/scripts.bundle.js"></script>
-
