--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -7,41 +7,28 @@
 
 @inherits LayoutComponentBase
 
-<html lang="en">
-<head>
-    <base href="" />
-    <HeadImport />
-</head>
+<div class="d-flex flex-column flex-root app-root" id="kt_app_root">
+    <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
 
-<body id="kt_app_body" data-kt-app-layout="dark-sidebar" data-kt-app-header-fixed="true" data-kt-app-sidebar-enabled="true" data-kt-app-sidebar-fixed="true" data-kt-app-sidebar-hoverable="true" data-kt-app-sidebar-push-header="true" data-kt-app-sidebar-push-toolbar="true" data-kt-app-sidebar-push-footer="true" data-kt-app-toolbar-enabled="true" class="app-default">
-    
-    <script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
-    
-    <div class="d-flex flex-column flex-root app-root" id="kt_app_root">
-        <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
+        <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
 
-            <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
+            <Topbar />
 
-                <Topbar />
+            <Sidebar />
+            
+            @Body
 
-                <Sidebar />
-
-                <BlazorApp1.Components.CurrencyInput.NewCurrency/>
-                @*<BlazorApp1.Components.CurrencyInput.CurrencyInput></BlazorApp1.Components.CurrencyInput.CurrencyInput>*@
+            @* <BlazorApp1.Components.CurrencyInput.NewCurrency />*@
+            @*<BlazorApp1.Components.CurrencyInput.CurrencyInput></BlazorApp1.Components.CurrencyInput.CurrencyInput>*@
 
 
+            <Scrolltop />
 
-            </div>
+
         </div>
-
     </div>
-    <Scrolltop />
 
+</div>
+@* <Scrolltop />
 
-    <ScriptDef />
-</body>
-
-</html>
-
-
-<BlazorApp1.Pages.Counter></BlazorApp1.Pages.Counter>
+<BlazorApp1.Pages.Counter></BlazorApp1.Pages.Counter> *@
