--- a/BlazorApp1/Shared/ScriptDef.razor
+++ b/BlazorApp1/Shared/ScriptDef.razor
@@ -2,3 +2,4 @@
 <!--begin::Global Javascript Bundle(mandatory for all pages)-->
 <script src="assets/plugins/global/plugins.bundle.js"></script>
 <script src="assets/js/scripts.bundle.js"></script>
+<script src="assets/js/interop.js"></script>
