--- a/BlazorApp1/Pages/DatePicker.razor
+++ b/BlazorApp1/Pages/DatePicker.razor
@@ -1,4 +1,6 @@
-﻿@inject IJSRuntime JsRuntime
+﻿@page "/datePicker"
+
+@inject IJSRuntime JsRuntime
 
 <input  class="form-control" placeholder="Pick a date" id="kt_datepicker_1"/>
 
