--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -8,8 +8,9 @@
 @inherits LayoutComponentBase
 
 <div class="d-flex flex-column flex-root app-root" id="kt_app_root">
+   <BlazorApp1.Components.Theme.ThemeScript/>
     <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
-
+        
         <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
 
             <Topbar />
