--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -15,8 +15,9 @@
             <Topbar />
 
             <Sidebar />
-            @Body
+            <BlazorApp1.Pages.DatePicker />
             <Scrolltop />
+
 
 
         </div>
