--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -15,7 +15,7 @@
             <Topbar />
 
             <Sidebar />
-            <BlazorApp1.Pages.DatePicker />
+            @Body
             <Scrolltop />
 
 
